Add API services task and solution, update to Java 21 and boot 3.1.5